[package]
name = "coffersbi"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4.21"
buddy_system_allocator = { version = "0.10.0", features = ["alloc", "use_spin"] }
sbi-spec = { version = "0.0.7", features = ["legacy"] }
fast-trap = { version = "0.0.1", features = ["riscv-m"] }
spin = "0.9.8"
